test/spec_vectors/load64/fail/module_19.wat
(module (memory i64 1) (func $load_i64 (i64.load (i64.const 0))))